--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
-<title>TEST</title>
+<title>jquery.loaded test</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="jquery.loaded.min.js"></script>
 </head>
